--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "devDependencies": {
     "@types/node": "^18",
     "nuxt": "^3.4.1",
+    "nuxt-icon": "^0.3.3",
     "nuxt-windicss": "^2.6.1"
   },
   "dependencies": {
-    "nuxt-icons": "^3.1.0"
+    "contentful": "^10.1.0"
   }
 }
