Chore - Install and configure Twicpics for images
Feat - complete design for article component in mobile view

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt-windicss": "^2.6.1"
   },
   "dependencies": {
+    "@twicpics/components": "^0.17.2",
     "contentful": "^10.1.0"
   }
 }
